--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <h1>Mi Proyecto</h1>
     <h2>Poliandino 2022</h2>
     <p>Estoy probando que la página actualice</p>
+    <div>
+        <h2>Un lindo gato</h2>
+        <img src="./assets/img/gato.jpg" alt="gato">
+    </div>
 </body>
 </html>
