--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Mi Proyecto</h1>
     <h2>Poliandino 2022</h2>
     <p>Estoy probando que la página actualice</p>
-    <div>
+    <div class="contenedorfoto">
         <h2>Un lindo gato</h2>
         <img src="./assets/img/gato.jpg" alt="gato">
     </div>
