--- a/index.html
+++ b/index.html
@@ -8,12 +8,35 @@
     <title>MiProyecto</title>
 </head>
 <body>
-    <h1>Mi Proyecto</h1>
-    <h2>Poliandino 2022</h2>
-    <p>Estoy probando que la página actualice</p>
-    <div class="contenedorfoto">
-        <h2>Un lindo gato</h2>
-        <img src="./assets/img/gato.jpg" alt="gato">
-    </div>
+    <header>
+        <div class="redessociales">
+            <img src="./assets/img/whatssapp.webp" alt="Logo whatssapp">
+            <img src="./assets/img/Instagram.webp" alt="Logo Instagram">
+
+        </div>
+        <div class="menu">
+        
+              <img src="./assets/img/Logo.jpg" alt="Logo" id="logo"> 
+              <h1>Shop Blonde Boutique</h1>
+              <button>Home</button>
+              <button>Leggins</button>
+              <button>Biker</button>
+              <button>Jogger</button>
+              <button>Camisas</button>
+              <button>Zapatos</button>
+
+            <form>
+                <input type="search" placeholder="Buscar">
+                <button>Buscar</button>
+            </form>
+
+            <img src="" alt="Carrito de compras">
+          
+        </div>
+
+
+
+
+</header>
 </body>
 </html>
