--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <header>
-        <div class="redessociales">
+        <div class="contenedorredes">
+            <div class="redes">
             <img src="./assets/img/whatssapp.webp" alt="Logo whatssapp">
             <img src="./assets/img/Instagram.webp" alt="Logo Instagram">
-
+            </div>
         </div>
         <div class="menu">
         
@@ -33,10 +34,6 @@
             <img src="" alt="Carrito de compras">
           
         </div>
-
-
-
-
 </header>
 </body>
 </html>
