--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./assets/styles/style.css">
     <title>MiProyecto</title>
 </head>
 <body>
     <Header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-danger mb-3">
+      <nav class="navbar navbar-light" id="redes">
+        <div>
+          <a class="navbar-brand" href="https://wa.link/6jnrjh">
+            <img src="./assets/img/whatssapp.webp" alt="whatssapp" width="40" height="32" class="redes">
+          </a>
+          <a class="navbar-brand" href="https://www.instagram.com/blondeboutique1/">
+            <img src="./assets/img/Instagram.webp" alt="Instagram" width="40" height="32" class="redes">
+          </a>
+        </div>
+
+      </nav>
+        <nav  class="navbar navbar-expand-lg navbar-light mb-3">
             <div class="container-fluid">
               <a class="navbar-brand text-white" href="#">
                  <img src="./assets/img/Logo.jpg" alt="Logo" class="logo">
@@ -21,35 +33,65 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Leggins</a>
+                    <a class="nav-link" href="#">Leggins</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Biker</a>
+                    <a class="nav-link" href="#">Biker</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Jogger</a>
+                    <a class="nav-link" href="#">Jogger</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Camisas</a>
+                    <a class="nav-link" href="#">Camisas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Zapatos</a>
+                    <a class="nav-link" href="#">Zapatos</a>
                   </li>
             
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+                  <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+                  <button class="btn btn-outline-success" type="submit"><i class="bi bi-cart3"></i></button>
                 </form>
               </div>
             </div>
           </nav>
     </Header>
 
-   
+   <Main>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./assets/img/Logo Boutique.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/img/Logo Boutique.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/img/Logo Boutique.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Siguiente</span>
+      </button>
+    </div>
+
+
+   </Main>
     
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
