cambio imagenes footer

--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
 
     <div class="footer">
       <div>
-        <img src="./assets/img/Shopf.JPG" alt="Tienda" >
-        <img src="./assets/img/Correof.JPG" alt="E-mail">
-        <img src="./assets/img/Whatsappf.JPG" alt="Whatsapp">
+        <img src="./assets/img/Shopf1.jpg" alt="Tienda" >
+        <img src="./assets/img/Correof1.jpg" alt="E-mail">
+        <img src="./assets/img/Whatsappf1.jpg" alt="Whatsapp">
       </div>
 
       <div class="centrar d-flex flex-row">
