--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                     <a class="nav-link" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="#nuevos">Nuevos productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#vendidos">Más vendidos</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="#">Leggins</a>
                   </li>
                   <li class="nav-item">
@@ -93,7 +99,7 @@
     <!--Finaliza Carrusel-->
 
     <!--Inicia Productos Nuevos-->
-    <h5>NUEVOS PRODUCTOS</h5>
+    <h5 id="nuevos">NUEVOS PRODUCTOS</h5>
 
     <div class="row">
       <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 px-4">
@@ -146,7 +152,7 @@
   
   
    <!--Inicia más vendidos-->
-   <h5>MÁS VENDIDOS</h5>
+   <h5 id="vendidos">MÁS VENDIDOS</h5>
    <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-5 col-xl-3 px-4">
       <img class="img-fluid" src="./assets/img/Logo Boutique.jpg" alt="img1">
